<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="smoking">Smoking</string>
    <string name="reserve">Reserve</string>
    <string name="reset">Reset</string>
    <string name="select_your_time">Select your time</string>
    <string name="select_your_date">Select your date</string>
    <string name="reservation_confirmation">Reservation confirmation</string>
    <string name="size">Size</string>
    <string name="enter_your_name">Enter Your Name</string>
</resources>